Revert "seo update for index"
This reverts commit 78f3e6a50d189e852d75168f492e79a1acfc1cbb.

--- a/infrastructure.html
+++ b/infrastructure.html
@@ -1,300 +1,225 @@
-Seobility logo
+<!doctype html>
+<html lang="en">
+<head>
 
-    Features & Use Cases
-    Pricing
-    Resources
-    EN
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-Log in
-Try it free
+  <title>Fuel the Infrastructure — surewhynot.app</title>
+  <meta name="description" content="Support surewhynot.app infrastructure." />
+  <link rel="canonical" href="https://surewhynot.app/infrastructure.html" />
+  <meta name="robots" content="index,follow" />
 
-Home SEO Checker (results)
+  <link rel="stylesheet" href="/assets/site.css">
 
-    SEO Checker
-    Ranking Checker
-    Backlink Checker
-    Keyword Research
-    Snippet Generator
-    TF*IDF Tool
-    Redirect Checker
-    SEO Compare
-    Keyword Checker
+  <!-- AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7167291111213614"
+    crossorigin="anonymous"></script>
 
-SEO Checker
+  <script>
+    async function loadPartials() {
+      const header = await fetch('/partials/header');
+      const footer = await fetch('/partials/footer.html');
 
-Analyze any web page for technical errors and on-page SEO problems, and get tips on how to optimize it.
-Upgrade now to increase your daily credit limit
-(50 per day in the Premium plan)
-Plan
-Checks per day
-Cost
-Unlock
-Basic
-5
-Free forever
-Sign up for free
-Premium
-50
-$50.00 / month
-Try it free for 14 days
-Agency
-200
-$200.00 / month
-Sign up now
+      document.getElementById('site-header').innerHTML = await header.text();
+      document.getElementById('site-footer').innerHTML = await footer.text();
+    }
+  </script>
 
-Questions? Contact us anytime at support@seobility.net – we’re happy to help!
+  <style>
+    .wrapCenter{
+      max-width:980px;
+      margin:auto;
+      display:flex;
+      justify-content:center;
+    }
 
- 
+    .cardCentered{
+      width:100%;
+      max-width:820px;
+      margin-top:16px;
+    }
 
-Prices exclude VAT where applicable.
+    .iconRow{
+      margin-top:20px;
+      display:flex;
+      gap:18px;
+      flex-wrap:wrap;
+      justify-content:center;
+    }
 
-Check page
+    .iconLink{
+      display:inline-block;
+      transition:transform .15s ease, opacity .15s ease;
+    }
 
-You have 2of 3 checks left today
-Page URL
-Crawl mode
-HTTP authentication: Username
-HTTP authentication: Password
-On-page score
-Issues:
-3Critical
-60%
-On-page score
-Meta data
-100 %
-Page quality
-52 %
-Page structure
-79 %
-Links
-0 %
-Server
-0 %
-External factors
-3 %
-HTML page
-Himmelimherzen
-Meta title
+    .iconLink:hover{
+      transform:scale(1.08);
+      opacity:.9;
+    }
 
-JSON Formatter, JWT Decoder & Security Tools | SureWhyNot
-Meta description
+    .iconLink img{
+      width:50px;
+      height:50px;
+      display:block;
+    }
 
-Free online JSON formatter, JWT decoder, CSP analyzer, hash generator, UUID generator, and log tools. Browser-based developer and security utilities.
-URL
-https://surewhynot.app/
-Status code
-	
-200
-Page status
-	
-FollowIndex
-Language
-	
-EN
-Response time
-	0.11 sec
-File size
-	5.70 kB
-Word count
-	71
-To-Do List
-Tasks sorted by priority
-	
-	
-Add a H1 heading to this page.	Error	
-This page has only very few internal links. If it's a welcome page, consider removing it.	Error	
-Use 301 redirects to drive traffic to URLS with the same domain and sub domain (www and non-www subdomain).	Error	
-Try to make the page title match the content more closely.	Warning	
-Review and improve the heading structure.	Tip	
-Checks
-Meta data
-100%
-Title
-Learn more
-3/3
-Very important
-JSON Formatter, JWT Decoder & Security Tools | SureWhyNot
-The length of the page title is perfect. (560 pixels out of 580 max pixel length)
-There are no duplicate words in the title.
-Meta description
-Learn more
-2/2
-Very important
-Free online JSON formatter, JWT decoder, CSP analyzer, hash generator, UUID generator, and log tools. Browser-based developer and security utilities.
-The length of the meta description is perfect. (938 pixels out of 1000 max pixel length)
-Crawlability
-Learn more
-1/1
-Very important
-There are no problems in accessing the page.
-Canonical link
-Learn more
-2/2
-Important
-https://surewhynot.app/
-There is a valid canonical link specified.
-Language
-Learn more
-4/4
-Low importance
-Language detected in text: en
-Language defined in HTML: en
-Server location: Germany
-The following language is defined in the HTML code: en
-Alternate/hreflang links
-Learn more
-1/1
-Low importance
-There are no alternate links specified on this page.
-Other meta tags
-Learn more
-2/2
-Low importance
-There is no rel=next meta tag on this page.
-There is no rel=prev meta tag on this page.
-Domain
-Learn more
-3/3
-Low importance
-The domain is not a subdomain.
-The domain length works well.
-The domain name does not contain any non-Latin characters.
-Page URL
-Learn more
-3/3
-Low importance
-No parameters were found in the URL.
-No session ID was found in the URL.
-The URL does not have too many subdirectories.
-Charset encoding
-Learn more
-1/1
-Low importance
-The charset encoding (UTF-8) is set correctly.
-Doctype
-Learn more
-2/2
-Nice to have
-The doctype HTML 5 is set correctly.
-The doctype is placed first in the HTML code.
-Favicon
-Learn more
-1/1
-Nice to have
-The favicon is linked correctly.
-Page quality
-52%
-Content
-Learn more
-Errors
-4/8
-Very important
-There are only 71 words on this page. Use at least 250 words to provide useful information
-Some words from the page title are not used within the pages content
-Only 1 paragraph/s was/were found on this page
-The average number of words per sentence of 4 words is low.
-19.7% of the text are stop words.
-The page contains a list, which indicates a good text structure.
-No placeholder texts or images were found.
-There are no duplicates on the site
-Frames
-Learn more
-1/1
-Very important
-This page does not use a frameset.
-Mobile optimization
-Learn more
-2/2
-Low importance
-A viewport (width=device-width, initial-scale=1) is provided.
-One or more Apple Touch icons are specified.
-Strong and bold tags
-Learn more
-1/1
-Low importance
-The usage of strong and bold tags is perfect. We recommend the use of up to 6 tags for this page.
-Image SEO
-Learn more
-1/1
-Low importance
-ALT text (alternative text) is correctly used on all found images.
-Social media
-Learn more
-Warning
-0/1
-Nice to have
-There are few social sharing options on the page. Sharing plugins can increase the page's reach on social media.
-Additional markup
-Learn more
-1/1
-Nice to have
-No additional page markup was found.
-HTTPS
-Learn more
-2/2
-Low importance
-This page uses HTTPS to protect the privacy and integrity of information exchanged.
-All included files are also transferred via HTTPS.
-Others
-79%
-H1 heading
-Learn more
-Errors
-0/1
-Very important
-There is no H1 heading specified.
-Headings
-Learn more
-Warning
-0/1
-Important
-The structure of headings is missing one or more levels. Do not skip heading levels.
-Link structure
-0%
-Internal links
-Learn more
-Errors
-3/4
-Important
-This page seems to be an entry page, because only very few links were found
-Every link text is unique.
-None of the link texts are too long.
-There are no dynamic parameters used in internal links.
-External links
-Learn more
-Warning
-0/1
-Nice to have
-There are no external links on this page.
-Server configuration
-0%
-HTTP redirects
-Learn more
-Errors
-1/2
-Very important
-The checked page does not redirect to another URL.
-This website uses both www and non-www URLs. This can result in duplicate content and impact your rankings. Redirect Checker
-HTTP header
-Learn more
-2/2
-Important
-No X-Powered HTTP header is sent.
-This page uses compression for data transfer.
-Performance
-Learn more
-2/2
-Low importance
-The HTML page response time of 0,11 seconds is below the target of 0.40 seconds.
-The file size of the HTML document is fine. (6 kB)
-External factors
-3%
-Backlinks
-Learn more
-Warning
-0/4
-Very important
-This page has only a few links from other websites
-This page only has backlinks from 1 referring domains.
-This page only has 1 backlinks.
-This page only has backlinks from 1 different IP addresses
+    .copyWrap{
+      margin-top:20px;
+      display:grid;
+      gap:12px;
+      max-width:820px;
+      margin-left:auto;
+      margin-right:auto;
+    }
+
+    .copyRow{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      flex-wrap:wrap;
+    }
+
+    .copyLabel{
+      min-width:90px;
+    }
+  </style>
+  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Fuel The Infrastructure",
+  "url": "https://surewhynot.app/infrastructure.html",
+  "description": "Support and infrastructure information for SureWhyNot Dev Studio."
+}
+</script>
+
+</head>
+
+<body onload="loadPartials()">
+  <div class="page">
+
+    <div id="site-header"></div>
+
+    <main>
+      <div class="wrap wrapCenter">
+        <div class="card cardCentered">
+          <div class="pad" style="text-align:center">
+
+            <h1 class="h1">Support the Infrastructure Behind SureWhyNot</h1>
+
+            <h2 class="muted" style="margin-top:8px; line-height:1.6; font-weight:normal;">
+              This developer lab runs on time, bandwidth, and caffeine.<br>
+              If these free browser-based security and IT tools are useful to you,<br>
+              consider helping keep the infrastructure online.
+            </h2>
+
+            <div class="hr"></div>
+
+            <p class="muted" style="font-size:12px; opacity:.7; margin-top:10px;">
+              Your support helps maintain hosting, bandwidth, development time, and ongoing improvements to SureWhyNot’s
+              JSON, JWT, CSP, hashing, and other browser-based utilities.
+            </p>
+
+            <div style="height:10px"></div>
+
+            <div class="muted" style="margin-bottom:10px; font-size:13px; letter-spacing:.5px;">
+              Links
+            </div>
+
+            <div class="iconRow">
+
+              <a class="iconLink"
+                 href="https://cash.app/$SureWhyNotDOTapp"
+                 target="_blank"
+                 rel="noopener">
+                <img src="/assets/cashapp-square.png" alt="Cash App">
+              </a>
+
+              <a class="iconLink"
+                 href="https://www.blockchain.com/btc/address/3DzuLkEVazmA3MUSaXsqx5gaZCbqnHUL78"
+                 target="_blank"
+                 rel="noopener">
+                <img src="/assets/bitcoin-circle.png" alt="Bitcoin">
+              </a>
+
+              <a class="iconLink"
+                 href="https://solscan.io/account/DR995pn5BbrGgm8dLNJRQSp1P12ANKm2xdyaax4pSDjb"
+                 target="_blank"
+                 rel="noopener">
+                <img src="/assets/solana-circle.png" alt="Solana">
+              </a>
+
+              <a class="iconLink"
+                 href="https://algoexplorer.io/address/GU4AQMWVLOBJXODQS6S62RZW5C6LES4W4YGSFM5RGHF6AQAAVJAF5GYXXM"
+                 target="_blank"
+                 rel="noopener">
+                <img src="/assets/algorand-logo.png" alt="Algorand">
+              </a>
+
+            </div>
+
+            <div class="hr"></div>
+
+            <div class="copyWrap">
+
+              <div class="copyRow">
+                <div class="muted copyLabel">Cash App</div>
+                <code class="kbd">$SureWhyNotDOTapp</code>
+                <button class="btn" type="button" data-copy="$SureWhyNotDOTapp">Copy</button>
+              </div>
+
+              <div class="copyRow">
+                <div class="muted copyLabel">Bitcoin</div>
+                <code class="kbd">3DzuLkEVazmA3MUSaXsqx5gaZCbqnHUL78</code>
+                <button class="btn" type="button" data-copy="3DzuLkEVazmA3MUSaXsqx5gaZCbqnHUL78">Copy</button>
+              </div>
+
+              <div class="copyRow">
+                <div class="muted copyLabel">Solana</div>
+                <code class="kbd">DR995pn5BbrGgm8dLNJRQSp1P12ANKm2xdyaax4pSDjb</code>
+                <button class="btn" type="button" data-copy="DR995pn5BbrGgm8dLNJRQSp1P12ANKm2xdyaax4pSDjb">Copy</button>
+              </div>
+
+              <div class="copyRow">
+                <div class="muted copyLabel">Algorand</div>
+                <code class="kbd">GU4AQMWVLOBJXODQS6S62RZW5C6LES4W4YGSFM5RGHF6AQAAVJAF5GYXXM</code>
+                <button class="btn" type="button" data-copy="GU4AQMWVLOBJXODQS6S62RZW5C6LES4W4YGSFM5RGHF6AQAAVJAF5GYXXM">Copy</button>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <div id="site-footer"></div>
+
+  </div>
+
+  <script>
+  (function () {
+    function flash(btn, text, ms) {
+      const prev = btn.textContent;
+      btn.textContent = text;
+      setTimeout(() => (btn.textContent = prev), ms);
+    }
+
+    function copyText(text, btn) {
+      navigator.clipboard.writeText(text)
+        .then(() => flash(btn, "Copied", 900))
+        .catch(() => flash(btn, "Failed", 1200));
+    }
+
+    document.addEventListener("click", function (e) {
+      const btn = e.target.closest("button[data-copy]");
+      if (!btn) return;
+      copyText(btn.getAttribute("data-copy"), btn);
+    });
+  })();
+  </script>
+
+</body>
+</html>
