--- a/terms.html
+++ b/terms.html
@@ -57,44 +57,105 @@
 
               <div class="muted">
 
-                By using surewhynot.app, you agree to the following terms.
+                Effective Date: [Insert Date]
+                <br><br>
+                By accessing or using surewhynot.app (“Site”), you agree to be bound by these Terms and Conditions. If you do not agree, you must discontinue use immediately.
 
                 <div class="hr"></div>
 
-                Site Use:
-                <br>- Personal, non-commercial use only.
-                <br>- No malicious activity or automated abuse.
-                <br>- No attempts to disrupt or exploit site functionality.
+                Eligibility:
+                <br>
+                You must be at least 18 years old or the age of majority in your jurisdiction to use this Site. By using the Site, you represent that you meet this requirement.
 
                 <div class="hr"></div>
 
-                Tool Output:
+                License to Use:
+                <br>
+                A limited, non-exclusive, non-transferable, revocable license is granted to access and use the Site for lawful purposes only.
+                <br>- No malicious, abusive, or unlawful use.
+                <br>- No automated scraping or abusive traffic.
+                <br>- No reverse engineering or exploitation attempts.
+                <br>- No interference with performance, security, or infrastructure.
+                <br>
+                Violations may result in termination of access without notice.
+
+                <div class="hr"></div>
+
+                Tool Output Disclaimer:
                 <br>
                 Tools generate results based on user input.
-                Accuracy is not guaranteed.
-                Users are responsible for verifying outputs.
+                Accuracy, completeness, or fitness for a particular purpose is not guaranteed.
+                Users are solely responsible for validating outputs before reliance.
+                <br>
+                The Site does not provide legal, financial, compliance, security, or professional advice.
+
+                <div class="hr"></div>
+
+                Data and Availability:
+                <br>
+                The Site operates primarily in-browser.
+                No guarantee is made regarding uptime, continuity, or data retention.
+                Browser storage may be cleared at any time.
+                The Site is not responsible for loss of data, configurations, or session information.
 
                 <div class="hr"></div>
 
                 Games:
                 <br>
-                Browser games are provided for entertainment.
-                Progress may be lost if browser storage is cleared.
-                No virtual items have monetary value.
+                Browser games are provided for entertainment purposes only.
+                Progress may be lost at any time.
+                No digital items hold monetary value.
+                No ownership rights are granted in game content.
 
                 <div class="hr"></div>
 
-                Advertising:
+                Advertising and Third Parties:
                 <br>
                 Advertising may be displayed to support hosting and development.
                 Ads are served by third-party providers.
+                The Site is not responsible for third-party content, claims, or external services.
+                Use of third-party links is at your own risk.
+
+                <div class="hr"></div>
+
+                Intellectual Property:
+                <br>
+                Site content, design, branding, and original code are the property of SureWhyNot unless otherwise stated.
+                No reproduction, redistribution, or commercial exploitation is permitted without written permission.
+
+                <div class="hr"></div>
+
+                Disclaimer of Warranties:
+                <br>
+                The Site is provided “as is” and “as available.”
+                No warranties, express or implied, are made regarding reliability, availability, security, or fitness for a particular purpose.
 
                 <div class="hr"></div>
 
                 Limitation of Liability:
                 <br>
-                The site is provided “as is.”
-                SureWhyNot is not liable for data loss or service interruption.
+                To the fullest extent permitted by law, SureWhyNot shall not be liable for direct, indirect, incidental, consequential, or special damages, including loss of data, revenue, or business interruption.
+                <br>
+                Total liability, if any, shall not exceed $100 USD.
+
+                <div class="hr"></div>
+
+                Indemnification:
+                <br>
+                You agree to indemnify and hold harmless SureWhyNot from any claims, damages, liabilities, or expenses arising from misuse of the Site, violation of these Terms, or reliance on tool outputs.
+
+                <div class="hr"></div>
+
+                Governing Law:
+                <br>
+                These Terms shall be governed by the laws of the State of [Insert State], without regard to conflict of law principles.
+
+                <div class="hr"></div>
+
+                Modifications:
+                <br>
+                These Terms may be updated at any time.
+                Continued use of the Site constitutes acceptance of revised Terms.
 
               </div>
             </div>
