--- a/privacy.html
+++ b/privacy.html
@@ -57,36 +57,107 @@
 
               <div class="muted">
 
-                SureWhyNot is designed to operate with minimal data collection.
+                Effective Date: [Insert Date]
+                <br><br>
+                This Privacy Policy explains how surewhynot.app (“Site”) handles information when you access or use the Site.
 
                 <div class="hr"></div>
 
-                Data Collection:
+                Summary:
                 <br>- No account registration required.
-                <br>- No personal information collected.
-                <br>- No payment details stored.
+                <br>- Tools are designed to run locally in your browser where possible.
+                <br>- Limited technical data may be processed for security, performance, analytics, and advertising.
+
+                <div class="hr"></div>
+
+                Information We Collect:
+                <br>
+                We do not require you to submit personal information to use the Site.
+                However, certain information may be collected or processed automatically:
+                <br>- Technical data (e.g., IP address, user agent, device/browser type, approximate location derived from IP).
+                <br>- Usage data (e.g., pages visited, navigation events, timestamps, performance metrics).
+                <br>- Advertising data (e.g., cookie identifiers or ad interaction signals handled by ad providers).
+                <br>
+                We do not intentionally collect sensitive personal information.
+
+                <div class="hr"></div>
+
+                User Input to Tools:
+                <br>
+                Tool input (text you paste, files you upload, or data you generate) is processed to provide the requested output.
+                Where the tool is implemented client-side, processing occurs in your browser.
+                If any tool uses server-side processing in the future, this policy will be updated to describe what is transmitted and stored.
 
                 <div class="hr"></div>
 
                 Local Storage:
                 <br>
                 Some tools or games may use browser local storage to save preferences or progress.
-                This information remains on your device.
+                This information remains on your device and can be cleared by you at any time through your browser settings.
+
+                <div class="hr"></div>
+
+                Cookies and Similar Technologies:
+                <br>
+                The Site and third parties may use cookies, local storage, pixels, or similar technologies to:
+                <br>- Provide basic site functionality and performance.
+                <br>- Measure traffic and usage.
+                <br>- Serve and measure advertising.
+                <br>
+                You can control cookies through your browser settings. Blocking cookies may affect advertising behavior and, in some cases, site functionality.
 
                 <div class="hr"></div>
 
                 Analytics:
                 <br>
-                Basic analytics may be used to measure traffic and performance.
-                No personally identifiable information is intentionally stored.
+                We may use analytics to measure traffic and performance (e.g., page views, referrers, error rates, and performance timing).
+                We do not intentionally store personally identifiable information in analytics reports.
+                Analytics providers may process technical identifiers (including IP addresses) as part of delivering analytics services.
 
                 <div class="hr"></div>
 
                 Advertising:
                 <br>
                 This site may display advertising, including Google AdSense.
-                Advertising providers may use cookies or similar technologies to serve ads.
-                Users can manage ad preferences through browser settings or Google ad controls.
+                Advertising providers may use cookies or similar technologies to serve ads, limit repetition, measure performance, and personalize ad content where permitted.
+                You can manage ad preferences via browser settings and Google ad controls.
+
+                <div class="hr"></div>
+
+                Sharing of Information:
+                <br>
+                We may share information in these cases:
+                <br>- Service providers: vendors that help operate the Site (hosting, analytics, advertising).
+                <br>- Legal: to comply with law, legal process, or enforce Site terms.
+                <br>- Security: to detect, prevent, or address fraud, abuse, or technical issues.
+
+                <div class="hr"></div>
+
+                Data Retention:
+                <br>
+                Client-side data stored in your browser remains until you clear it.
+                Server-side logs and analytics (if any) are retained only as long as necessary for security, performance, and operational purposes.
+
+                <div class="hr"></div>
+
+                Security:
+                <br>
+                Reasonable technical and organizational measures are used to help protect the Site.
+                No method of transmission or storage is 100% secure.
+
+                <div class="hr"></div>
+
+                Children:
+                <br>
+                The Site is not directed to children under 13 and is not intended for their use.
+                We do not knowingly collect personal information from children under 13.
+
+                <div class="hr"></div>
+
+                Changes to This Policy:
+                <br>
+                This Privacy Policy may be updated from time to time.
+                Changes take effect when posted on this page with an updated effective date.
 
                 <div class="hr"></div>
 
