--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,7 @@
 
               <div class="muted">
 
-                Effective Date: [Insert Date]
+                Effective Date: 2026 February 19
                 <br><br>
                 This Privacy Policy explains how surewhynot.app (“Site”) handles information when you access or use the Site.
 
@@ -163,7 +163,7 @@
 
                 Contact:
                 <br>
-                Privacy questions: <span class="kbd">privacy@surewhynot.app</span>
+                Privacy questions: <a href="/contact.html" class="kbd">privacy@surewhynot.app</a>
 
               </div>
             </div>
