--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
 
                 This site is designed to provide:
                 <br>- Quick functional utilities that solve small tasks efficiently.
+                <br>- Browser-based developer and security tools (JSON formatting, JWT decoding, CSP analysis, hash generation, UUID generation, and log inspection).
                 <br>- Lightweight browser-native games that load instantly.
                 <br>- A clean, minimal environment without social feeds or account systems.
 
@@ -74,10 +75,14 @@
                 Pages are intentionally lightweight and optimized for fast load times.
 
                 <br><br><strong>Privacy.</strong>
-                No accounts required. No forced sign-in. No hidden tracking mechanisms.
+                No accounts required. No forced sign-in. No unnecessary data collection.
 
                 <br><br><strong>Local-first interaction.</strong>
-                Game progress and tool outputs remain in your browser whenever technically possible.
+                Tool inputs and outputs are designed to stay in your browser whenever technically possible.
+                Some tools or games may use local storage to remember preferences or progress.
+
+                <br><br><strong>Focused utility.</strong>
+                Each page aims to solve a specific problem cleanly, without turning into a bloated dashboard.
 
                 <br><br><strong>Sustainable support.</strong>
                 Advertising may be displayed to support hosting and development.
@@ -85,6 +90,9 @@
 
                 <div class="hr"></div>
 
+                SureWhyNot is built for developers, IT professionals, security engineers, and technically curious users who value speed and minimal friction.
+
+                <br><br>
                 SureWhyNot is not a social platform, subscription service, or marketplace.
                 It is a focused, evolving web studio built for practical use and lightweight interaction.
 
