--- a/index.html
+++ b/index.html
@@ -92,9 +92,23 @@
               <h2 class="h2">Welcome</h2>
 
               <p class="muted" style="margin-top:6px">
-                Local-first tools for builders. Fast. Private. No accounts. No uploads.<br>
-                Built for real work — paste your data, get what you need, move on.<br>
-                Everything runs in your browser.
+                SureWhyNot is a browser-based developer toolkit built for real work and technical exploration.
+                All utilities run locally in your browser — no accounts, no uploads, no server-side processing of your data.
+
+                <br><br>
+
+                Core tools include:
+                <br>– JSON Formatter and JSON validator
+                <br>– JSON to TypeScript converter
+                <br>– JWT Decoder with header and payload inspection
+                <br>– CSP Analyzer for Content Security Policy review
+                <br>– Hash Generator (SHA-256, SHA-384, SHA-512 and more)
+                <br>– UUID Generator
+                <br>– Log Explorer for structured log inspection
+
+                <br><br>
+
+                Built for web developers, full-stack engineers, software developers, security engineers, systems thinkers, infrastructure builders, sandbox experimenters, and technically curious enthusiasts who value speed, clarity, and minimal friction.
               </p>
 
               <div style="height:18px"></div>
