--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-          <!-- RIGHT -->
+                    <!-- RIGHT -->
           <div class="card">
             <div class="pad">
 
@@ -153,6 +153,50 @@
 
             </div>
           </div>
+
+          <!-- Common Use Cases -->
+          <div class="card">
+            <div class="pad">
+              <h2 class="h2">Common Use Cases</h2>
+              <ul class="list" style="margin-top:10px; line-height:1.65">
+                <li>Formatting and validating malformed JSON payloads</li>
+                <li>Inspecting JWT headers, payload claims, and expiration values</li>
+                <li>Reviewing and debugging Content Security Policy headers</li>
+                <li>Generating cryptographic hashes for integrity checks</li>
+                <li>Creating UUIDs for distributed systems and test data</li>
+                <li>Exploring structured logs during debugging or incident response</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Security Model -->
+          <div class="card">
+            <div class="pad">
+              <h2 class="h2">Security Model</h2>
+              <ul class="list" style="margin-top:10px; line-height:1.65">
+                <li>No backend data persistence</li>
+                <li>No cross-user data access</li>
+                <li>Stateless request model</li>
+                <li>No account authentication surface</li>
+                <li>Minimal attack surface due to static delivery</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Why Local-First -->
+          <div class="card">
+            <div class="pad">
+              <h2 class="h2">Why Local-First?</h2>
+              <ul class="list" style="margin-top:10px; line-height:1.65">
+                <li>Lower latency — no round-trip to a processing server</li>
+                <li>Reduced risk of sensitive data exposure</li>
+                <li>No backend infrastructure dependency for core functionality</li>
+                <li>Transparent, inspectable browser execution</li>
+                <li>Predictable behavior without hidden processing layers</li>
+              </ul>
+            </div>
+          </div>
+	 	  
 
         </section>
       </div>
