--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-                    <!-- RIGHT -->
+                    <!-- RIGHT: Latest updates -->
           <div class="card">
             <div class="pad">
 
@@ -141,9 +141,12 @@
                 <li>CSP Analyzer: severity findings + report download (.txt/.json)</li>
               </ul>
 
-              <div style="height:14px"></div>
-              <hr>
-              <div style="height:14px"></div>
+            </div>
+          </div>
+
+          <!-- RIGHT: What’s coming next (separate card to reduce whitespace) -->
+          <div class="card">
+            <div class="pad">
 
               <h2 class="h2">What’s coming next</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
@@ -183,16 +186,15 @@
             </div>
           </div>
 
-          <!-- Why Local-First -->
+          <!-- Why Local-First (shorter so it tucks under Security Model) -->
           <div class="card">
             <div class="pad">
               <h2 class="h2">Why Local-First?</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
-                <li>Lower latency — no round-trip to a processing server</li>
-                <li>Reduced risk of sensitive data exposure</li>
-                <li>No backend infrastructure dependency for core functionality</li>
-                <li>Transparent, inspectable browser execution</li>
-                <li>Predictable behavior without hidden processing layers</li>
+                <li>No upload step — work stays on-device</li>
+                <li>Faster feedback loop for debugging</li>
+                <li>Less infrastructure to trust</li>
+                <li>Simple, predictable behavior</li>
               </ul>
             </div>
           </div>
