Revert "Update index.html"
This reverts commit 0c4f59b7eb513ec3b299125d162e25d9eb306ff9.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
 
-                    <!-- RIGHT: Latest updates -->
+                    <!-- RIGHT -->
           <div class="card">
             <div class="pad">
 
@@ -141,12 +141,9 @@
                 <li>CSP Analyzer: severity findings + report download (.txt/.json)</li>
               </ul>
 
-            </div>
-          </div>
-
-          <!-- RIGHT: What’s coming next (separate card to reduce whitespace) -->
-          <div class="card">
-            <div class="pad">
+              <div style="height:14px"></div>
+              <hr>
+              <div style="height:14px"></div>
 
               <h2 class="h2">What’s coming next</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
@@ -186,15 +183,16 @@
             </div>
           </div>
 
-          <!-- Why Local-First (shorter so it tucks under Security Model) -->
+          <!-- Why Local-First -->
           <div class="card">
             <div class="pad">
               <h2 class="h2">Why Local-First?</h2>
               <ul class="list" style="margin-top:10px; line-height:1.65">
-                <li>No upload step — work stays on-device</li>
-                <li>Faster feedback loop for debugging</li>
-                <li>Less infrastructure to trust</li>
-                <li>Simple, predictable behavior</li>
+                <li>Lower latency — no round-trip to a processing server</li>
+                <li>Reduced risk of sensitive data exposure</li>
+                <li>No backend infrastructure dependency for core functionality</li>
+                <li>Transparent, inspectable browser execution</li>
+                <li>Predictable behavior without hidden processing layers</li>
               </ul>
             </div>
           </div>
