--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
+  
+    <!-- Cloudflare Web Analytics -->
+	<script 
+	defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a242123e79364861b53c9d15b496b283"}'>
+    </script>
+    <!-- End Cloudflare Web Analytics -->
+  
 </head>
 
 <body>
