--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/site.webmanifest">
   
-    <!-- Cloudflare Web Analytics -->
-	<script 
-	defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a242123e79364861b53c9d15b496b283"}'>
+    <!-- Cloudflare Web Analytics  ***WRAP BEACON*** -->
+	<script>
+  if (location.hostname === "surewhynot.app") {
+    const s = document.createElement("script");
+    s.defer = true;
+    s.src = "https://static.cloudflareinsights.com/beacon.min.js";
+    s.setAttribute("data-cf-beacon", '{"token":"a242123e79364861b53c9d15b496b283"}');
+    document.head.appendChild(s);
+  }
     </script>
-    <!-- End Cloudflare Web Analytics -->
+    <!-- End Cloudflare Web Analytics ***WRAP BEACON***-->
   
 </head>
 
